# b2analysis

./: .gitignore  .pre-commit-config.yaml  README.md  project.toml  pyproject.toml  setup.cfg  setup.py
b2analysis/: __init__.py  admin.py  b2select.py  efficiency.py  elog.py  histogram.py  ntuples.py  tools.py
b2analysis.egg-info/: PKG-INFO  SOURCES.txt
b2analysis_anselm_baur.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: histogram.ipynb  histogram.py  stacked_histogram.ipynb  stacked_histogram.py
src/: __init__.py  admin.py  elog.py  pxd.py
src/b2analysis/: __init__.py  b2select.py  histogram.py  histogram2d.py  ntuples.py  tools.py
tests/: test_histogram.py  test_histogram2d.py  test_stacked_histograms.py
