[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "b2analysis-anselm-baur" # Replace with your own username
version = "0.0.12"
authors = [
    { name="Anselm Baur", email="anselm.baur@desy.de"}
]
description = "analysis package for my Belle II related anlyses"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://stash.desy.de/users/abaur/repos/b2analysis/browse"


[tool.setuptools.dynamic]
version =  {attr = "b2analysis-anselm-baur.VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["b2analysis"]

